assets/css/main.css
/* ... */
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
button:hover,
.button:hover {
	background-color: rgba(255, 255, 255, 0.025);
}

input[type="submit"]:active,
input[type="reset"]:active,
input[type="button"]:active,
button:active,
.button:active {
	background-color: rgba(255, 255, 255, 0.075);
}

input[type="submit"].icon:before,
input[type="reset"].icon:before,
input[type="button"].icon:before,
button.icon:before,
.button.icon:before {
	margin-right: 0.5em;
	color: rgba(255, 255, 255, 0.35);
}

input[type="submit"].primary,
input[type="reset"].primary,
input[type="button"].primary,
button.primary,
.button.primary {
	background-color: #4c5c96;
	box-shadow: none;
}

input[type="submit"].primary:hover,
input[type="reset"].primary:hover,
input[type="button"].primary:hover,
button.primary:hover,
.button.primary:hover {
	background-color: #53639e;
}

input[type="submit"].primary:active,
input[type="reset"].primary:active,
input[type="button"].primary:active,
button.primary:active,
.button.primary:active {
	background-color: #45558d;
}

input[type="submit"].primary.icon:before,
input[type="reset"].primary.icon:before,
input[type="button"].primary.icon:before,
button.primary.icon:before,
.button.primary.icon:before {
	color: #7985b0;
}

input[type="submit"].fit,
input[type="reset"].fit,
input[type="button"].fit,
button.fit,
.button.fit {
	width: 100%;
}

input[type="submit"].small,
input[type="reset"].small,
input[type="button"].small,
button.small,
.button.small {
	font-size: 0.6em;
}

input[type="submit"].large,
input[type="reset"].large,
input[type="button"].large,
button.large,
.button.large {
	font-size: 1em;
}

input[type="submit"].disabled,
input[type="submit"]:disabled,
input[type="reset"].disabled,
input[type="reset"]:disabled,
input[type="button"].disabled,
input[type="button"]:disabled,
button.disabled,
button:disabled,
.button.disabled,
.button:disabled {
	opacity: 0.25;
}

@media screen and (max-width: 480px) {

	input[type="submit"],
	input[type="reset"],
	input[type="button"],
	button,
	.button {
		padding: 0;
	}

}

/* Features */

.features {
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	-moz-flex-wrap: wrap;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	margin: 0 0 2em 0;
}

.features article {
	padding: 1.75em 1.75em 1.75em 1.75em;
	background-color: #353849;
	border-radius: 5px;
	margin: 1.5em 3em 1.5em 0;
	width: calc(50% - 1.5em);
}

.features article:nth-child(2n) {
	margin-right: 0;
}

.features article .image {
	border-radius: 5px 5px 0 0;
	display: block;
	margin-bottom: 1.75em;
	margin-left: -1.75em;
	margin-top: -1.75em;
	position: relative;
	width: calc(100% + 3.5em);
}

.features article .image img {
	border-radius: 5px 5px 0 0;
	width: 100%;
}

@media screen and (max-width: 980px) {

	.features article {
		margin: 1em 2em 1em 0;
		width: calc(50% - 1em);
	}

}

@media screen and (max-width: 736px) {

	.features article {
		padding: 1.5em 1.5em 0.1em 1.5em;
		margin: 0.875em 1.75em 0.875em 0;
		width: calc(50% - 0.875em - 1px);
	}

	.features article .image {
		margin-bottom: 1.5em;
		margin-left: -1.5em;
		margin-top: -1.5em;
		width: calc(100% + 3em);
	}

}

@media screen and (max-width: 480px) {

	.features {
		display: block;
	}

	.features article {
		width: 100%;
		margin: 0 0 2em 0 !important;
	}

}

/* Header */

#header {
	-moz-transition: background-color 0.2s ease-in-out;
	-webkit-transition: background-color 0.2s ease-in-out;
	-ms-transition: background-color 0.2s ease-in-out;
	transition: background-color 0.2s ease-in-out;
	background-color: rgba(53, 56, 73, 0.95);
	height: 3.5em;
	left: 0;
	line-height: 3.5em;
	padding: 0 1.25em;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 10000;
}

#header h1 {
	-moz-transition: opacity 0.2s ease-in-out, visibility 0.2s;
	-webkit-transition: opacity 0.2s ease-in-out, visibility 0.2s;
	-ms-transition: opacity 0.2s ease-in-out, visibility 0.2s;
	transition: opacity 0.2s ease-in-out, visibility 0.2s;
	border-bottom: 0;
	font-size: 0.8em;
	margin-bottom: 0;
	opacity: 1;
	visibility: visible;
}

#header h1 a {
	border: 0;
}

#header nav {
	font-family: Raleway, Helvetica, sans-serif;
	font-size: 0.8em;
	font-weight: 700;
	height: 3em;
	letter-spacing: 0.1em;
	line-height: 3em;
	position: absolute;
	right: 0.7em;
	text-transform: uppercase;
	top: 0.7em;
}

#header nav a {
	border: 0;
	display: inline-block;
	padding: 0 1em;
}

#header nav a:before {
	float: right;
	margin-left: 0.75em;
}

#header nav a[href="#menu"] {
	text-decoration: none;
	-moz-transition: background-color 0.2s ease-in-out;
	-webkit-transition: background-color 0.2s ease-in-out;
	-ms-transition: background-color 0.2s ease-in-out;
	transition: background-color 0.2s ease-in-out;
	border-radius: 5px;
	box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.125);
	padding: 0 1.35em;
}

#header nav a[href="#menu"]:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	font-style: normal;
	font-variant: normal;
	text-rendering: auto;
	line-height: 1;
	text-transform: none !important;
	font-family: 'Font Awesome 5 Free';
	font-weight: 900;
}

#header nav a[href="#menu"]:before {
	content: '\f0c9';
	line-height: inherit;
}

#header nav a[href="#menu"]:hover {
	background-color: rgba(255, 255, 255, 0.025);
}

#header nav a[href="#menu"]:active {
	background-color: rgba(255, 255, 255, 0.075);
}

#header.alt {
	background-color: transparent;
}

#header.alt h1 {
	opacity: 0;
	visibility: hidden;
}
/* ... */

